--- a/README
+++ b/README
@@ -1,5 +1,13 @@
-Gem in progress
+Regioncodes
+======
 
-Task1. Read up about seeding models..
-http://asciicasts.com/episodes/179-seed-data
+Unfinished. Currently, unusable.
 
+
+Example
+=======
+
+Example goes here.
+
+
+Copyright (c) 2010 [Nick Kokkos], released under the MIT license
